[gd_scene load_steps=23 format=2]

[ext_resource path="res://PCs/Pc_necromancer.png" type="Texture" id=1]
[ext_resource path="res://Spells/CloneSpell.gd" type="Script" id=2]
[ext_resource path="res://Spells/SmokeFX Lite 4A sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 192, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 384, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 576, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 768, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 960, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 4284, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 4536, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 4788, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 5040, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 5292, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 5544, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 5796, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 6048, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 6300, 0, 252, 61 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 6552, 0, 252, 61 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "poof",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.0
height = 4.0

[node name="CloneSpell" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 22 )
scale = Vector2( 0.510417, 0.510417 )
frames = SubResource( 8 )
animation = "poof"
offset = Vector2( 0, 15 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 46, 76 )
scale = Vector2( 0.545573, 0.545573 )
frames = SubResource( 8 )
animation = "poof"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 57, -6 )
scale = Vector2( 0.518229, 0.518229 )
frames = SubResource( 8 )
animation = "poof"
offset = Vector2( 0, 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 57, 0 )
shape = SubResource( 9 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 46, 75 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 29 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
